# dgcu-WORD

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  main.hpp  res.h  res.rc
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt  core.cpp  core.hpp
